--- a/style/style.css
+++ b/style/style.css
@@ -54,3 +54,42 @@ ul {
 h1, h2, h3, p {
     margin: 0;
 }
+
+.burger {
+    display: inline-block;
+    cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: rgb(255, 255, 255);
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.close {
+    position: absolute;
+    right: 32px;
+    top: 32px;
+    width: 32px;
+    height: 32px;
+    opacity: 0.7;
+    }
+.close:hover {
+    opacity: 1;
+    }
+.close:before, .close:after {
+    position: absolute;
+    left: 15px;
+    content: ' ';
+    height: 33px;
+    width: 2px;
+    background-color: rgb(255, 255, 255);
+    }
+.close:before {
+    transform: rotate(45deg);
+    }
+.close:after {
+    transform: rotate(-45deg);
+    }
