--- a/style/style.css
+++ b/style/style.css
@@ -27,6 +27,9 @@ body {
     font-family: Roboto, sans-serif;
     background-color: #000;
     color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between ;
 }
 
 img {
@@ -55,41 +58,170 @@ h1, h2, h3, p {
     margin: 0;
 }
 
+.header {
+    padding-top: 9px;
+    padding-bottom: 9px;
+    position: relative;
+}
+
+.navigation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;  
+}
+
+.navigation__list {
+    display: flex;
+    text-transform: uppercase;
+    margin-right: 14px;
+}
+
+.navigation__link {
+    padding: 7px 14px;
+    display: block;
+}
+.navigation__link_active {
+    background-color: #e90000;
+    
+}
+
+.header__hashtag {
+    margin-right: 14px;
+}
+
+.social {
+    display: flex;
+}
+
+.social__item {
+    margin-right: 20px;
+}
+
+.social__item:last-child {
+    margin-right: 0;
+
+}
+
+.social__link {
+    display: block;
+    width: 24px;
+    height: 24px;
+}
+
+.social__link_fb {
+    background-image: url('../img/fb.svg') ;
+}
+.social__link_twitter {
+    background-image: url('../img/twit.svg') ;
+}
+
+.social__link_instagram {
+    background-image: url('../img/inst.svg') ;
+}
+
 .burger {
-    display: inline-block;
+    display: none;
+}
+
+.mute {
+    position: absolute;
+    right: 100px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 44px;
+    height: 24px;
+    overflow: hidden;
+    background-color: #fff;
+    border-radius: 30px;
+}
+
+.mute__checkbox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    opacity: 0;
     cursor: pointer;
+    z-index: 3px;
 }
 
-.bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: rgb(255, 255, 255);
-    margin: 6px 0;
-    transition: 0.4s;
+.mute__label:before,
+.mute__label:after {
+    content: '';
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    display: block;
+    height: 22px;
+    width: 22px;
+    border-radius: 50% ;
+    background-color: #E90000;
+    box-shadow: 0px 1px 1px rgba(69, 2, 2, 0.3);
+    transition: left 0.3s ease-in-out, right 0.3s ease-in-out;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
-.close {
-    position: absolute;
-    right: 32px;
-    top: 32px;
-    width: 32px;
-    height: 32px;
-    opacity: 0.7;
-    }
-.close:hover {
-    opacity: 1;
-    }
-.close:before, .close:after {
-    position: absolute;
-    left: 15px;
-    content: ' ';
-    height: 33px;
-    width: 2px;
-    background-color: rgb(255, 255, 255);
-    }
-.close:before {
-    transform: rotate(45deg);
-    }
-.close:after {
-    transform: rotate(-45deg);
-    }
+.mute__label:before {
+    background-image: url('../img/volume_off.svg');
+
+}
+
+.mute__label:after {
+    right: -22px;
+    left: auto;
+    background-image: url('../img/volume_up.svg');
+}
+
+.mute__checkbox:checked+.mute__label:before {
+    left: -22px;
+}
+
+.mute__checkbox:checked+.mute__label:after {
+    right: 1px;
+}
+
+.navigation__close {
+    display: none;
+}
+.main {
+    flex-grow: 1;
+}
+
+.main_index {
+    display: flex;
+    align-items: center;
+    background-image: url('../img/bg.jpg');
+    background-position: top;
+    background-size: cover;
+    padding-left: 180px;
+}       
+
+.footer {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 9px;
+    line-height: 11px;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+}
+
+.footer__links {
+    display: flex;
+    gap: 21px;
+    margin-bottom: 6px;
+}
+
+
+
+.footer__copyright {
+    color: #6A6A6A;
+}
