--- a/style/style.css
+++ b/style/style.css
@@ -59,6 +59,7 @@ h1, h2, h3, p {
 }
 
 .header {
+    height: 50px;
     padding-top: 9px;
     padding-bottom: 9px;
     position: relative;
@@ -191,6 +192,7 @@ h1, h2, h3, p {
 }
 .main {
     flex-grow: 1;
+    position: relative;
 }
 
 .main_index {
@@ -202,17 +204,7 @@ h1, h2, h3, p {
     padding-left: 180px;
 }       
 
-.footer {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 9px;
-    line-height: 11px;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-}
+
 
 
 .logo {
@@ -226,6 +218,23 @@ h1, h2, h3, p {
 }
 
 
+
+.footer {
+    height: 70px;
+    position: relative;
+    z-index: 500;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 9px;
+    line-height: 11px;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+}
+
+
 .footer__links {
     display: flex;
     gap: 21px;
@@ -236,6 +245,64 @@ h1, h2, h3, p {
 
 .footer__copyright {
     color: #6A6A6A;
+}
+
+.main_slider{
+    height: calc(100% - 120px);
+    
+}
+
+.slider-main {
+    height: 100%;
+}
+
+
+.slider-main__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pagination {
+    padding-left: 20px;
+    padding-right: 20px;
+    z-index: 400;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding-bottom: 15px;
+    background-color: #000;
+    min-height: 144px;
+    padding-top: 12px;
+}
+
+.pagination__arrow {
+    display: block;
+    margin: 0 auto 35px;
+    width: 0;
+    height: 0;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-top: 7px solid white;
+    background-color: transparent;
+    transition: border-color 0.3s ease-in-out;
+}
+
+
+.pagination__arrow:hover {
+    border-top-color: #e90000 ;
+}
+
+.slider-thumbs {
+    max-width: 820px;
+}
+
+.slider-main__video {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
 }
 
 @media (max-width: 1024px) {
@@ -333,6 +400,7 @@ h1, h2, h3, p {
         padding-left: 20px;
         padding-right: 20px;
         text-align: center;
+        gap: 5px;
     }
 }
 
@@ -356,6 +424,7 @@ h1, h2, h3, p {
     }
 
     .footer {
+        height: 50px;
         font-size: 6px;
         line-height: 7px;
         padding-left: 20px;
@@ -363,4 +432,12 @@ h1, h2, h3, p {
         text-align: center;
     }
 
+}
+
+.pagination__arrow {
+    margin-bottom: 6px;
+}
+
+.pagination {
+    min-height: 80px;
 }
