--- a/style/style.css
+++ b/style/style.css
@@ -73,6 +73,7 @@ h1, h2, h3, p {
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.02em;  
+    z-index: 600;
 }
 
 .navigation__list {
@@ -220,7 +221,7 @@ h1, h2, h3, p {
 
 
 .footer {
-    height: 70px;
+    height: 50px;
     position: relative;
     z-index: 500;
     padding-top: 10px;
@@ -248,8 +249,9 @@ h1, h2, h3, p {
 }
 
 .main_slider{
-    height: calc(100% - 120px);
-    
+    height: calc(100% - 100px);
+    overflow: hidden;
+    padding-bottom: 10px ;
 }
 
 .slider-main {
@@ -275,6 +277,15 @@ h1, h2, h3, p {
     background-color: #000;
     min-height: 144px;
     padding-top: 12px;
+    transform: translateY(calc(100% - 25px));
+    transition: transform 0.5s ease-in-out;
+}
+
+
+
+.pagination_active {
+    transform: translateY(0);
+
 }
 
 .pagination__arrow {
@@ -284,14 +295,24 @@ h1, h2, h3, p {
     height: 0;
     border-left: 7px solid transparent;
     border-right: 7px solid transparent;
-    border-bottom: 6px solid transparent;
-    border-top: 7px solid white;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid white;
     background-color: transparent;
     transition: border-color 0.3s ease-in-out;
 }
 
+.pagination_active .pagination.pagination__arrow {
+    border-bottom: 6px solid transparent;
+    border-top: 6px solid white;
+
+}
 
 .pagination__arrow:hover {
+    border-top-color: #e90000 ;
+}
+
+.pagination_active .pagination__arrow:hover {
+    border-bottom-color: transparent ;
     border-top-color: #e90000 ;
 }
 
@@ -303,6 +324,11 @@ h1, h2, h3, p {
     height: 100%;
     width: 100%;
     object-fit: contain;
+}
+
+.slider-thumbs__img {
+    max-height: 100px;
+    object-fit: cover;
 }
 
 @media (max-width: 1024px) {
